# garagepi

./: Makefile  README.md  install-plate-watcher.sh  install-service.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
automation/: plate_watcher.py
src/garagepi/: app.py  cli.py  gpio.py  mqtt.py
src/garagepi/systemd/: garagepi.service  plate_watcher.service
src/garagepi/templates/: index.html
tests/: test_smoke.py
